RESOLVED FIXED290244
[Model] Handle the error case when the model asset cannot be loaded
https://bugs.webkit.org/show_bug.cgi?id=290244
Summary [Model] Handle the error case when the model asset cannot be loaded
Ada Chan
Reported 2025-03-21 23:44:59 PDT
[Model] Handle the error case when the model asset cannot be loaded
Attachments
Ada Chan
Comment 1 2025-03-21 23:45:00 PDT
Ada Chan
Comment 2 2025-03-21 23:53:37 PDT
EWS
Comment 3 2025-03-22 15:42:52 PDT
Committed 292547@main (9a9926c5768c): <https://commits.webkit.org/292547@main> Reviewed commits have been landed. Closing PR #42869 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.